# exchange-api-test-task

./: .dockerignore  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py  settings.py
app/v1/: __init__.py  main.py  schemas.py  utils.py
deploy/: docker-compose.yml
utils/: redis_wrapper.py
